# ai-video-dubber

./: .gitignore  README.md
backend/: .env.example  README.md  config.py  job_store.py  main.py  model_loader.py  pyproject.toml  queue_manager.py  requirements.txt
backend/pipeline/: runner.py  stage1_extract.py  stage2_transcribe.py  stage3_translate.py  stage4_tts.py  stage4_tts_indic.py  stage5_stretch.py  stage6_timeline.py  stage7_mux.py
backend/routers/: download.py  health.py  job_view.py  queue.py  status.py  stream.py  upload.py
frontend/: .gitignore  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx  HealthIndicator.tsx  LogViewer.tsx  StatusBadge.tsx
frontend/src/hooks/: use-api.ts  use-log-stream.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardLayout.tsx  JobDetailPage.tsx  LandingPage.tsx  QueuePage.tsx  SettingsPage.tsx  UploadPage.tsx
