[project]
name = "backend"
version = "0.1.0"
description = "Backend for Video Dubbing"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.6",
    "requests>=2.28",
    "sarvamai>=0.1.28",
    "python-dotenv>=1.0",
    "soundfile>=0.12",
    "pydub>=0.25",
    "ffmpeg-python>=0.2",
    "numpy<2",
    "setuptools<81",
    "transformers>=4.30",
    "sentencepiece>=0.1",
    "accelerate>=0.20",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
torchaudio = [
  { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
